--- a/E-Commerce/E-Commerce.csproj
+++ b/E-Commerce/E-Commerce.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>E_Commerce</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
